// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches snapshot 1`] = `
.c3 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c1 {
  display: block;
  position: relative;
}

.c1 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 {
  font-size: 1em;
  color: undefined;
}

.c2 {
  display: inline;
}

<div>
  <span
    class=" c0"
    data-test-id="hsui-Text"
  >
    <div
      class=" c1 c2"
    >
      <span
        class=" "
      />
      <div
        class=" c3"
        color="#9FA2A5"
      />
    </div>
  </span>
</div>
`;

exports[`Text matches snapshot with icon strings 1`] = `
.c4 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: block;
  position: relative;
}

.c2 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 {
  font-size: 1em;
  color: undefined;
}

.c3 {
  display: inline;
}

.c1 {
  margin-right: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

.c5 {
  margin-left: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

<div>
  <span
    class=" c0"
    data-test-id="hsui-Text"
  >
    <span
      class=" c1"
    >
      <svg
        role="presentation"
        style="width: 1em; height: 1em;"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
    <div
      class=" c2 c3"
    >
      <span
        class=" "
      />
      <div
        class=" c4"
        color="#9FA2A5"
      />
    </div>
    <span
      class=" c5"
    >
      <svg
        role="presentation"
        style="width: 1em; height: 1em;"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Text matches snapshot with icons 1`] = `
.c4 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: block;
  position: relative;
}

.c2 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 {
  font-size: 1em;
  color: undefined;
}

.c3 {
  display: inline;
}

.c1 {
  margin-right: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

.c5 {
  margin-left: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

<div>
  <span
    class=" c0"
    data-test-id="hsui-Text"
  >
    <span
      class=" c1"
    >
      <svg
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
    <div
      class=" c2 c3"
    >
      <span
        class=" "
      />
      <div
        class=" c4"
        color="#9FA2A5"
      />
    </div>
    <span
      class=" c5"
    >
      <svg
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Text matches snapshot with isLoading 1`] = `
.c4 {
  opacity: 1;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c1 {
  display: block;
  position: relative;
  color: transparent !important;
}

.c1 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c1 > *:not(.c3) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 {
  font-size: 1em;
  color: undefined;
}

.c2 {
  display: inline;
}

<div>
  <span
    class=" c0"
    data-test-id="hsui-Text"
  >
    <div
      class=" c1 c2"
    >
      <span
        class=" "
      />
      <div
        class=" c3 c4"
        color="#9FA2A5"
      />
    </div>
  </span>
</div>
`;

exports[`Text matches snapshot with isProcessing 1`] = `
.c4 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: block;
  position: relative;
}

.c2 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 {
  font-size: 1em;
  color: undefined;
}

.c3 {
  display: inline;
}

.c1 {
  margin-right: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

<div>
  <span
    class=" c0"
    data-test-id="hsui-Text"
  >
    <span
      class=" c1"
    >
      <svg
        aria-hidden="true"
        role="presentation"
        style="width: 1em; height: 1em;"
        viewBox="0 0 24 24"
      >
        <style>
          @keyframes spin { to { transform: rotate(360deg) } }
        </style>
        <g
          style="animation: spin linear 1s infinite; transform-origin: center;"
        >
          <path
            d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
            style="fill: currentColor;"
          />
          <rect
            fill="transparent"
            height="24"
            width="24"
          />
        </g>
      </svg>
    </span>
    <div
      class=" c2 c3"
    >
      <span
        class=" "
      />
      <div
        class=" c4"
        color="#9FA2A5"
      />
    </div>
  </span>
</div>
`;
